Remove support for JDK 8